// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> matches the snapshot: variant: default, size: lg, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b4190x9"
    data-testid="button"
  >
    <span
      class="slvi054 b16symwr"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: lg, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b1l9461r"
    data-testid="button"
  >
    <span
      class="slvi054 b16symwr"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: lg, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b4190x9"
    data-testid="button"
  >
    <svg
      class="c108jgnp bo94lri"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b16symwr"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: lg, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b1l9461r"
    data-testid="button"
  >
    <svg
      class="c108jgnp bo94lri c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b16symwr"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: md, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b1ig5l0y"
    data-testid="button"
  >
    <span
      class="slvi054 b13xm4po"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: md, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 bq44b7t"
    data-testid="button"
  >
    <span
      class="slvi054 b13xm4po"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: md, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b1ig5l0y"
    data-testid="button"
  >
    <svg
      class="c108jgnp br7adeq"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b13xm4po"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: md, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 bq44b7t"
    data-testid="button"
  >
    <svg
      class="c108jgnp br7adeq c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b13xm4po"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: sm, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b106izpi"
    data-testid="button"
  >
    <span
      class="slvi054 b19d1o3t"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: sm, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b14eo67x"
    data-testid="button"
  >
    <span
      class="slvi054 b19d1o3t"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: sm, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b106izpi"
    data-testid="button"
  >
    <svg
      class="c108jgnp bj3h2v"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b19d1o3t"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: sm, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b14eo67x"
    data-testid="button"
  >
    <svg
      class="c108jgnp bj3h2v c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b19d1o3t"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: xl, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 bkz0lf"
    data-testid="button"
  >
    <span
      class="slvi054 b1flgtne"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: xl, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b1vby7g1"
    data-testid="button"
  >
    <span
      class="slvi054 b1flgtne"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: xl, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 bkz0lf"
    data-testid="button"
  >
    <svg
      class="c108jgnp b276tsp"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b1flgtne"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: default, size: xl, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 b1gnzyb2 b1vby7g1"
    data-testid="button"
  >
    <svg
      class="c108jgnp b276tsp c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b1flgtne"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: lg, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b4190x9"
    data-testid="button"
  >
    <span
      class="slvi054 b16symwr"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: lg, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b1l9461r"
    data-testid="button"
  >
    <span
      class="slvi054 b16symwr"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: lg, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b4190x9"
    data-testid="button"
  >
    <svg
      class="c108jgnp bo94lri"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b16symwr"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: lg, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b1l9461r"
    data-testid="button"
  >
    <svg
      class="c108jgnp bo94lri c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b16symwr"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: md, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b1ig5l0y"
    data-testid="button"
  >
    <span
      class="slvi054 b13xm4po"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: md, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx bq44b7t"
    data-testid="button"
  >
    <span
      class="slvi054 b13xm4po"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: md, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b1ig5l0y"
    data-testid="button"
  >
    <svg
      class="c108jgnp br7adeq"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b13xm4po"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: md, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx bq44b7t"
    data-testid="button"
  >
    <svg
      class="c108jgnp br7adeq c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b13xm4po"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: sm, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b106izpi"
    data-testid="button"
  >
    <span
      class="slvi054 b19d1o3t"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: sm, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b14eo67x"
    data-testid="button"
  >
    <span
      class="slvi054 b19d1o3t"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: sm, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b106izpi"
    data-testid="button"
  >
    <svg
      class="c108jgnp bj3h2v"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b19d1o3t"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: sm, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b14eo67x"
    data-testid="button"
  >
    <svg
      class="c108jgnp bj3h2v c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b19d1o3t"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: xl, icon: false, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx bkz0lf"
    data-testid="button"
  >
    <span
      class="slvi054 b1flgtne"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: xl, icon: false, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b1vby7g1"
    data-testid="button"
  >
    <span
      class="slvi054 b1flgtne"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: xl, icon: true, children: false 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx bkz0lf"
    data-testid="button"
  >
    <svg
      class="c108jgnp b276tsp"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b1flgtne"
    />
  </button>
</div>
`;

exports[`<Button> matches the snapshot: variant: inverted, size: xl, icon: true, children: true 1`] = `
<div>
  <button
    class="b11jtqo5 bdi40cx b1vby7g1"
    data-testid="button"
  >
    <svg
      class="c108jgnp b276tsp c75i3tf"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
      />
      <path
        d="M19 10v2a7 7 0 0 1-14 0v-2"
      />
      <line
        x1="12"
        x2="12"
        y1="19"
        y2="23"
      />
      <line
        x1="8"
        x2="16"
        y1="23"
        y2="23"
      />
    </svg>
    <span
      class="slvi054 b1flgtne"
    >
      Lorem Ipsum
    </span>
  </button>
</div>
`;
